# aec-election

./: .gitignore  Cargo.toml
election_derive/: Cargo.toml
election_derive/src/: lib.rs
example/: analysis_predictor.py  views.sql
example/AEC Media Feed Documentation Version 3.0/AEC Media Feed Documentation Version 3.0/AEC Schema Documentation/: ballotpapers_Accepted.html  ballotpapers_AccuracyType.html  ballotpapers_AddressDetails.html  ballotpapers_AddressDetails1.html  ballotpapers_AddressLine.html  ballotpapers_AddressLinesType.html  ballotpapers_AdministrativeArea.html  ballotpapers_Affiliation.html  ballotpapers_AffiliationIdentifier.html  ballotpapers_AffiliationIdentifierStructure.html  ballotpapers_AffiliationStructure.html  ballotpapers_Agent.html  ballotpapers_AgentIdentifier.html  ballotpapers_AgentIdentifierStructure.html  ballotpapers_AgentStructure.html  ballotpapers_Area.html  ballotpapers_AreaStructure.html  ballotpapers_AuditInformation.html  ballotpapers_AuditInformationStructure.html  ballotpapers_AustralianStateType.html  (+1745 more)
example/aec-mediafeed-Detailed-Preload-29422-20230626124906/xml/: aec-mediafeed-pollingdistricts-29422.xml  aec-mediafeed-results-detailed-preload-29422.xml  eml-110-event-29422.xml  eml-230-candidates-29422.xml
example/qld/: 2024.xml  README  scema.xsd
lib/: database.rs  election_models.rs  eml_5.rs  lib.rs  sql_db.rs
src/: aec_parser.rs  database.rs  election_server.rs  eml_schema.rs  federal_election.rs  main.rs  mongo_db.rs  qld_election.rs  sql_db.rs  xml_extension.rs
tests/: sql_schema_test.rs
(+7 files in other folders)
