[package]
name = "aec-election"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
suppaftp = "^5.1.0"
zip = "0.6.4"
minidom = "0.15.1"
serde = "1.0.159"
mongodb = { version="2.4.0", features = ["tokio-sync"], default-features = false}
postgres = "0.19.5"